# src/api-key/dto/create-api-key.dto.ts
@@ -1,0 +1,7 @@
+import { IsString, IsNotEmpty } from 'class-validator';
+
+export class CreateApiKeyDto {
+    @IsString()
+    @IsNotEmpty()
+    name: string;
+} 
