# src/api-key/dto/update-api-key.dto.ts
@@ -1,0 +1,8 @@
+import { IsString, IsNotEmpty, IsOptional } from 'class-validator';
+
+export class UpdateApiKeyDto {
+    @IsString()
+    @IsNotEmpty()
+    @IsOptional()
+    name?: string;
+} 
